# Commutation_Configuration_pkg

./: .gitignore
base_placement_plugin/: CMakeLists.txt  package.xml  plugin.xml
base_placement_plugin/include/base_placement_plugin/: add_robot_base.h  add_way_point.h  create_marker.h  place_base.h  point_tree_model.h
base_placement_plugin/include/base_placement_plugin/widgets/: base_placement_widget.h
base_placement_plugin/rviz/: base_placement.rviz
base_placement_plugin/src/: create_marker.cpp  place_base.cpp  point_tree_model.cpp
base_placement_plugin/src/widgets/: base_placement_widget.cpp
map_creator/: CMakeLists.txt  Doxyfile  README.md  mainpage.dox  package.xml
map_creator/include/map_creator/: hdf5_dataset.h  manipulator_voxel_occupancy_list.h  mh5_ikfast.cpp  remove_reachability_obstacles.h
map_creator/maps/: motoman_mh5_r1.1_reachability.h5  motoman_mh5_r1_reachability.h5
map_creator/src/: create_capability_map.cpp  create_inverse_reachability_map.cpp  create_reachability_map.cpp  hdf5_dataset.cpp  kinematics.cpp  load_capability_map.cpp  load_reachability_map.cpp  manipulator_voxel_occupancy_list.cpp  remove_reachability_obstacles.cpp  sphere_discretization.cpp  test_state_voxels.cpp
